syntax = "proto3";

import "Proto/Common.proto";
import "google/protobuf/timestamp.proto";

package discord.twitter.ttsBot.adminAccess;

service AdminAccess {
  rpc GetTwitterUser (GetTwitterUserRequest) returns (GetTwitterUserResponse);
  rpc AddTwitterUser (GetTwitterUserRequest) returns (GetTwitterUserResponse);
  rpc RemoveTwitterUser (RemoveTwitterUserRequest) returns (GetTwitterUserResponse);
  rpc GetAllTwitterUsers (GetAllTwitterUserRequest) returns (GetAllTwitterUserRespone);

  rpc AddQueueItem (AddQueueRequest) returns (AddQueueResponse);
  rpc GetQueue (GetQueueRequest) returns (GetQueueResponse);
  rpc GetItems (GetQueueRequest) returns (GetQueueResponse);
  rpc GetReadItems (GetQueueRequest) returns (GetQueueResponse);
  rpc ReadItems (ReadItemsRequest) returns (ReadItemsResponse);
  rpc ReadNextQueueItems (ReadNextQueueItemsRequest) returns (ReadItemsResponse);
}

message ReadNextQueueItemsRequest {
  int32 count = 1;
}

message ReadItemsResponse {
  repeated QueueItem queueItems = 1;
}

message ReadItemsRequest {
  repeated QueueItem queueItems = 1;
}

message GetAllTwitterUserRequest {

}

message GetAllTwitterUserRespone {
  repeated TwitterUser users = 1;
}

message GetTwitterUserRequest {
  oneof user {
    int64 id = 1;
    string handle = 2;
  }
  string language = 3;
  string voiceName = 4;
}

message RemoveTwitterUserRequest {
  oneof user {
    int64 id = 1;
    TwitterUser twitterUser = 2;
  }
}

message GetTwitterUserResponse {
  TwitterUser user = 1;
}

message AddQueueRequest {
  oneof newItem {
    int64 tweetId = 1;
    QueueItem item = 2;
  }
}

message AddQueueResponse {
  oneof newItem {
    QueueItem item = 1;
    bool isEmpty = 2;
  }
}

message GetQueueRequest {
  repeated TwitterUser users = 1;
  string filter = 2;
  google.protobuf.Timestamp from = 3;
  google.protobuf.Timestamp to = 4;
}

message GetQueueResponse {
  repeated QueueItem items = 1;
}